# stock_data_project

./: .gitignore  Makefile  README.md  pyproject.toml
.github/: actions.yml
devops/db/current_schema/: schema.sql
devops/db/schema_upgrades/: 20230904_init_db.sql
scripts/: create_database.py
src/pipelines/configs/: stg.toml
src/pipelines/jobs/: populate_database.py
src/stock_data_project/pipelines/jobs/: populate_database.py
src/stock_data_project/tools/: io.py
src/storage/: database_manager.py
tests/: conftest.py  mock_data.py
tests/units/: test_create_database.py
